<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/id_dispositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/total_chunks_coletados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/total_localizacoes_coletadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/iniciar_atualizacoes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="iniciarAtualizacoesButtonHandler"
            android:text="@string/iniciar_atualizacoes" />

        <Button
            android:id="@+id/parar_atualizacoes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center"
            android:onClick="paraAtualizacoesButtonHandler"
            android:text="@string/parar_atualizacoes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enviar_dados_coletados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="enviarDadosColetados"
            android:text="@string/enviar_dados_coletados"/>

    </LinearLayout>

    <!--<Spinner
        android:id="@+id/modo_de_transporte_spinner"
        android:layout_width="fill_parent"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"/>
    -->

    <TextView
        android:id="@+id/selecionar_modo_de_transporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione o Modo de Transporte:"
        android:textSize="18sp"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

        <Button
            android:id="@+id/modo_de_transporte_caminhando"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarModoDeTransporteParaCaminhando"
            android:text="@string/modo_de_transporte_caminhando"/>

        <Button
            android:id="@+id/modo_de_transporte_bicicleta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarModoDeTransporteParaBicicleta"
            android:text="@string/modo_de_transporte_bicicleta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/modo_de_transporte_carro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarModoDeTransporteParaCarro"
            android:text="@string/modo_de_transporte_carro" />

        <Button
            android:id="@+id/modo_de_transporte_moto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarModoDeTransporteParaMoto"
            android:text="@string/modo_de_transporte_moto" />

        <Button
            android:id="@+id/modo_de_transporte_onibus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarModoDeTransporteParaOnibus"
            android:text="@string/modo_de_transporte_onibus" />


    </LinearLayout>

    <TextView
        android:id="@+id/selecionar_proposito_da_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione o Propósito da Viagem:"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/proposito_de_viagem_casa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarPropositoDaViagemParaCasa"
            android:text="@string/proposito_de_viagem_casa"/>

        <Button
            android:id="@+id/proposito_de_viagem_trabalho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarPropositoDaViagemParaTrabalho"
            android:text="@string/proposito_de_viagem_trabalho" />

        <Button
            android:id="@+id/proposito_de_viagem_educacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarPropositoDaViagemParaEducacao"
            android:text="@string/proposito_de_viagem_educacao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/proposito_de_viagem_compras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarPropositoDaViagemParaCompras"
            android:text="@string/proposito_de_viagem_compras"/>

        <Button
            android:id="@+id/proposito_de_viagem_lazer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarPropositoDaViagemParaLazer"
            android:text="@string/proposito_de_viagem_lazer" />

        <Button
            android:id="@+id/proposito_de_viagem_outro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="mudarPropositoDaViagemParaOutro"
            android:text="@string/proposito_de_viagem_outro"/>
    </LinearLayout>



    <!--<fragment-->
        <!--android:id="@+id/map"-->
        <!--android:name="com.google.android.gms.maps.MapFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_margin="@dimen/small_margin"/>-->


    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Endereço do Servidor de Coleta:"/>

    <EditText
        android:id="@+id/endereco_servidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_servidor"
        android:onClick="atualizarEnderecoDoServidor"/>

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/hora_da_ultima_atualizacao_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />



    <TextView
        android:id="@+id/velocidade_maxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/velocidade_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/numero_de_paradas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/tempo_de_parada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/aceleracao_maxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/mudancas_de_direcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />
    <TextView
        android:id="@+id/tempo_de_parada_medio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />
    <TextView
        android:id="@+id/numero_de_interpolacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/total_de_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/total_de_pontos_capturados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/default_text_size" />




</LinearLayout>
